# go-cmd

./: BUILD.bazel  WORKSPACE  bazel-bin  bazel-genfiles  bazel-go-cmd  bazel-out  bazel-testlogs  build.sh  go.mod
cmd/goodbye/: BUILD.bazel  main.go
cmd/hello/: BUILD.bazel  main.go
pkg/uppercase/: BUILD.bazel  uppercase.go
