load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/eirikrlee/go-cmd/cmd/goodbye",
    visibility = ["//visibility:private"],
    deps = ["//pkg/uppercase:go_default_library"],
)

go_binary(
    name = "goodbye",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
